# bowtie2

./: .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-aarch64  Makefile  sse_wrap.h
scripts/: travis_wait.sh
scripts/test/: simple_tests.pl
